<resources>

    <string name="app_name">DailyWiFi</string>

    <string name="action_add">Add</string>
    
    <string name="text_view_no_accounts">No accounts</string>
    
    <string name="text_view_text_cancel">Cancel</string>
    <string name="text_view_text_save">Save</string>
    <string name="text_view_text_remove">Remove</string>
    
    <string name="edit_text_hint_ssid">SSID</string>
    <string name="edit_text_hint_username">Username</string>
    <string name="edit_text_hint_password">Password</string>
    
    <string name="error_required_ssid">SSID is required</string>
    <string name="error_required_username">Username is required</string>
    <string name="error_required_password">Password is required</string>
</resources>
